$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.10-11 (Jan 27, 2008, working...)

	* permuted.index2: fixed a bug in permutations with strata.

	* Documentation: added documentation for permuted.index2, 
	permControl, permCheck and helkper functions.

Version 1.10-10 (closed Jan 27, 2008)

	* DESCRIPTION: suggests tcltk.

	* orditkplot: new function for ordination plots based on Tcl/Tk:
	you can edit graph by moving labels using a mouse and save the
	edited graph as an EPS file.

	* CCorA: removed partial analysis (which needs more work and may
	reappear later).
	
Version 1.10-9 (closed Jan 16, 2008)

	* anova.cca: new option by = "margin" to perform separate tests
	for each marginal effect in a model with all other terms. This is
	similar to Type III tests, but will only work with marginal terms,
	and will exclude main effects when corresponding interactions are
	in the model.  P-value is now assessed in the true blue way as
	(hits+1)/(permutations+1) in all anova.cca methods. Permutations
	should be able to handle now rank deficit cases with pivoting in
	the QR decomposition (permutest.cca).
	
	* permuted.index2: New version of permuted.index() that now allows
	restricted permutations. Can produce permutations for time-series
	or line transects and for spatial grids. These can also be nested
	within 'strata'. permuted.series() and permuted.grid() are the 
	relevant workhorse functions. Permutation options are set by new 
	function permControl(). Plan to migrate vegan functions to 
	permuted.index2() in the devel version, and will eventually replace
	the current permuted.index().

	* permCheck: New function for checking permutation schemes under
	permuted.index2. Uses new function numPerms() to generate the 
	number of possible permutations. permCheck() has print, summary
	and print.summary methods.
	
Version 1.10-8 (closed Dec 14 2007, at Rev. 133)

	* metaMDS: gains argument wascores (defaults TRUE) to suppress