@@ -4,6 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.10-11 (Jan 27, 2008, working...)
 
+	* bgdispersal: New, more powerful test statistic (in terms of Type
+	1 error rate) for the McNemar test (Pierre Legendre).
+	
 	* permuted.index2: fixed a bug in permutations with strata.
 
 	* Documentation: added documentation for permuted.index2, 
